Fix avatar on mobile #441

--- a/api/app/assets/stylesheets/site.scss
+++ b/api/app/assets/stylesheets/site.scss
@@ -2139,6 +2139,26 @@ p.content a {
                 max-width: 85%;
             }
         }
+        .box-avatar {
+            .avatar {
+                a {
+                    transition-duration: $anim-normal;
+                    transform: translate(2px, 2px);
+                    -webkit-box-shadow: none;
+                    -moz-box-shadow: none;
+                    box-shadow: none;
+                    color: #fff;
+                    &:before{
+                        top: -60px;
+                        left: -60px;
+                        transition-duration: $anim-normal;
+                    }
+                }
+            }
+            .avatar_hover {
+                display: block !important;
+            }
+        }
     }
     body {
         background-size: cover;
