--- a/api/app/assets/stylesheets/site/user.scss
+++ b/api/app/assets/stylesheets/site/user.scss
@@ -363,7 +363,7 @@ body.profile {
             height: 100% !important;
         }
         .deskicon {
-            opacity: 0;
+            display:none;
         }
         .mobile-edit {
             position: absolute;
